ilivalidator 1.3.0 (2017-06-xx)
-----------------------------
- ili2c-4.7.3
- added: support multiple input files
- fixed: wrong error message "doItfOidPerTable!=false"

ilivalidator 1.2.1 (2017-04-20)
-----------------------------
- iox-ili 1.18.1 (2017-04-20)
- validator: fixed implementation of uniqueness constraint

ilivalidator 1.2.0 (2017-04-19)
-----------------------------
- iox-ili 1.18.0 (2017-04-19)
- keep/save last directory of file selector
- iox-ili: fixed: missing custom functions should not report an error
- validator: added: implement UNIQUE (LOCAL)
- validator: added: implement UNIQUE WHERE expression

ilivalidator 1.1.0 (2017-04-05)
-----------------------------
- iox-ili 1.16.0-master (2017-04-05)
- validator: fixed: switching constraint check off
- validator: fixed: role EXTERNAL handling in cardinality and reference
- validator: optimized: constraint error messages
- validator: added: new option --forceTypeValidation
- validator: added: new option --disableAreaValidation

ilivalidator 1.0.0 (2017-03-10)
-----------------------------
- iox-ili 1.14.0-feature/validator1 (2017-03-10)
- validator: changed API of user defined functions
- validator: added: validate plausibility constraints
- validator: added: evaluate user defined functions
- validator: added: enable user defined error messages
- validator: added: get message in specific validation if configuration off
- validator: fixed: unique constraint not checked
- validator: fixed: custom functions with object collections
- validator: fixed: missed errors in xtf log file
- validator: fixed: evaluation of sub-enum constants
- validator: improved/fixed topology validation
- validator: optimized: validate external/additional constraint
- validator: optimized: performance

ilivalidator 0.10.0 (2017-02-10)
-----------------------------
- iox-ili 1.14.0-feature/validator1
- validator: optimized unique TID/OID check